example of using country name, country capital and country continents pipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <h1>
   {{title}}
+
+  AW
+  Name: {{ 'AW' | a2ToCountry }}
+  Capital: {{ 'AW' | a2ToCapital }}
+  Continent: {{ 'AW' | a2ToContinent }}
+  
 </h1>
