--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/flag-icon-css/css/flag-icon.min.css';
 
-body {
-    background: #374046;
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
 }
 
-h1 {
-    color: white;    
+body {
+    background: #374046;
+    margin: 0px !important;
 }
