--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,34 @@
 <header>
-    <h1>Ng Countries</h1>
+  <h1>Ng Countries</h1>
 </header>
 
-<md-card class='country-summary' *ngFor='let a2Country of _countriesKeys'>
-   <div class='flag-container'>
-      <app-country-flag [alpha2]='a2Country'></app-country-flag>
-   </div>
-   
-   <md-card-subtitle [innerHtml]='a2Country'></md-card-subtitle>
-   
-   <md-card-title [innerHtml]='a2Country | a2ToCountry'></md-card-title>
+<main class='main-content-container'>
+  <md-card class='country-summary' *ngFor='let a2Country of _countriesKeys'>
+    <div class='flag-container'>
+        <app-country-flag [alpha2]='a2Country'></app-country-flag>
+    </div>
+    
+    <md-card-subtitle [innerHtml]='a2Country'></md-card-subtitle>
+    
+    <md-card-title [innerHtml]='a2Country | a2ToCountry'></md-card-title>
 
-   <md-card-subtitle>{{ a2Country | a2ToCountry : ['native'] }}</md-card-subtitle>      
-   
-   <md-card-content>
-      <p>
-        <span>Capital: </span>{{ a2Country | a2ToCapital }}
-      </p>
+    <md-card-subtitle>{{ a2Country | a2ToCountry : ['native'] }}</md-card-subtitle>      
+    
+    <md-card-content>
+        <p>
+            <span>Capital: </span>{{ a2Country | a2ToCapital }}
+        </p>
 
-      <p>
-        <span>Continent: </span>{{ a2Country | a2ToContinent }}
-      </p>
-   </md-card-content>
-</md-card>
+        <p>
+            <span>Continent: </span>{{ a2Country | a2ToContinent }}
+        </p>
+
+        <div *ngIf='_anthemsData[a2Country]'>
+            <app-anthem [alpha2]='a2Country'></app-anthem>
+        </div>
+    </md-card-content>
+
+  </md-card>
+
+
+</main>
