--- a/src/app/components/country-flag/country-flag.component.html
+++ b/src/app/components/country-flag/country-flag.component.html
@@ -1,1 +1,6 @@
-<span [ngClass]='_classes'></span>
+<span [ngClass]='_classes' 
+      (click)='_onClick()'
+      style.line-height='{{height}}px'
+      style.width='{{width}}px'
+      [title]='alpha2 | a2ToCountry'>
+</span>
