--- a/src/app/modules/speaker/components/country-native-name-speaker/country-native-name-speaker.component.html
+++ b/src/app/modules/speaker/components/country-native-name-speaker/country-native-name-speaker.component.html
@@ -1,1 +1,1 @@
-<speaker [text]='name' [language]='language' [gender]='gender'></speaker>
+<speaker [text]='_name' [language]='_language' [gender]='gender'></speaker>
