speaker - hide speak button when there is no speaker for the specific language

--- a/src/app/modules/speaker/components/speaker/speaker.component.html
+++ b/src/app/modules/speaker/components/speaker/speaker.component.html
@@ -1,2 +1,5 @@
 {{ text }}
-<input type='button' (click)='_speak()' value='🔊' />
+<input *ngIf='_isSpeakerExist'
+       type='button' 
+       (click)='_speak()' 
+       value='🔊' />
