--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,12 +17,29 @@ header h1 {
     display: inline-table;
     position: relative;
     width: 250px;
-    height: 235px;
+    height: 250px;
 
     background-color: #e4e4e4;
     padding: 20px;
     margin: 0 10px 10px 0;
     border: 1px solid gray;
+}
+
+.serial-number {
+    position: absolute;
+    bottom: -1px;
+    right: -1px;
+    width: 40px;
+    height: 40px;
+
+    text-align: center;
+    font-size: 14px;
+    line-height: 40px;
+
+    border: 2px dotted rgb(55, 64, 70);
+    border-right: 0;
+    border-bottom: 0;
+    border-radius: 13px 0 0 0;
 }
 
 .shrink-mode {
@@ -44,29 +61,8 @@ header h1 {
 app-country-borders {
     display: block;
     position: absolute;
-    margin-top: 16px;
 }
 
-.shuffle-on {
-    color: orangered;
-}
-
-.shuffle-button-container {
-    position: absolute;
-    right: 35px;
-    top: 16px;
-    font-size: 2em;
-    color: white;
-    cursor: pointer;
-}
-
-.shuffle-count {
-    position: absolute;
-    left: 28px;
-    top: -11px;
-    font-size: .5em;
-    padding: 2px;
-    border-radius: 6px;
-    color: white;
-    background-color: rgba(40, 40, 191, 0.72)
+.country-borders-container {
+    margin-bottom: 16px;
 }
