--- a/src/app/components/country-flag/country-flag.component.html
+++ b/src/app/components/country-flag/country-flag.component.html
@@ -1,8 +1,18 @@
-<span [ngClass]='_classes' 
+<span *ngIf='alpha2 !== "XK" && alpha2 !== "NC"'
+      [ngClass]='_classes' 
       (mouseenter)='_onOver($event)'
       (click)='_onClick()'
-      style.line-height='{{height}}px'
-      style.height='{{height}}px'      
-      style.width='{{width}}px'
+      [style.line-height.px]='height'
+      [style.height.px]='height'      
+      [style.width.px]='width'
       [title]='alpha2 | a2ToCountry'>
 </span>
+
+<img *ngIf='alpha2 === "XK" || alpha2 === "NC"'
+     src='/assets/images/{{ alpha2 }}-country-flag.png'
+     [height]='height'
+     [width]='width'
+     [title]='alpha2 | a2ToCountry'
+     (mouseenter)='_onOver($event)'
+     (click)='_onClick()'
+     class='flag'/>
