--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,6 @@
     </div>
 </header>
 
-<main class='main-content-container' shuffle (shuffleCount)='_onShuffleCount($event)'>
     <!--<world-flags-map></world-flags-map>-->
     
     <country-details 
@@ -26,4 +25,6 @@
         [isAnthemExist]='_anthemsData.hasOwnProperty(a2Country)'>
     
     </country-details>
+         shuffle 
+         (shuffleCount)='_onShuffleCount($event)'>
 </main>
