--- a/src/app/modules/shared/components/shuffle-button/shuffle-button.component.html
+++ b/src/app/modules/shared/components/shuffle-button/shuffle-button.component.html
@@ -9,6 +9,7 @@
        class="fa fa-random" 
        [class.shuffle-on]='_isShuffleOn'     
        (mouseenter)='_onMouseEnter()' 
+       title='Shuffle'
        aria-hidden="true">
     </i>
 </div>
