Flags map - add background outline map & styling

--- a/src/app/components/world-flags-map/world-flags-map.component.css
+++ b/src/app/components/world-flags-map/world-flags-map.component.css
@@ -2,7 +2,9 @@
     position: relative;
     width: 720px;
     height: 360px;
-    background: lightblue;
+    background: url('/assets/images/countries-outlines-map.png');
+    background-position-y: 10px;
+    background-size: cover;
 }
 
 .country-flag-container {
