--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class='sticky-header'>
     <h1>Ng2 Countries | By dormd</h1>
     <shuffle-button [count]='_shuffleCount' (shuffleClick)='_onShuffleClick()'></shuffle-button>
     
@@ -6,6 +6,7 @@
         Sort:
         <div (click)='_onSortByArea()'>
             <i class="fa fa-globe" aria-hidden="true"></i>
+    <section class='main-operations-bar clearfix'>
         </div>
 
         <div (click)='_onSortByPopulation()'>
