--- a/src/app/components/coat-of-arms/coat-of-arms.component.html
+++ b/src/app/components/coat-of-arms/coat-of-arms.component.html
@@ -2,4 +2,4 @@
      [width]='width'
      [title]='alpha2 | a2ToCountry'
      (mouseenter)='_onOver($event)'
-     src='/assets/images/coat-of-arms/{{ alpha2 }}.png' />
+     [src]='imgSrc' />
