--- a/src/app/components/country-outline/country-outline.component.html
+++ b/src/app/components/country-outline/country-outline.component.html
@@ -2,4 +2,4 @@
      [width]='width'
      [title]='alpha2 | a2ToCountry'
      (mouseenter)='_onOver($event)'
-     src='/assets/images/country-outlines/{{ alpha2 }}.png' />
+     [src]='_imgSrc' />
