Country gallery - hide gallery small images on shrink mode

--- a/src/app/components/country-details/country-details.component.html
+++ b/src/app/components/country-details/country-details.component.html
@@ -6,7 +6,8 @@
         <country-gallery 
             [alpha2]='alpha2' 
             [isOutlinesHide]='data.isOutlinesImgExist === false' 
-            [isCoatOfArmsHide]='data.isCoatOfArmsImgExist === false'>
+            [isCoatOfArmsHide]='data.isCoatOfArmsImgExist === false'
+            [isShrinkMode]='isShrinkMode'>
         </country-gallery>
     </div>
 
