World flags map - add best resolution button (unstyled) & styling

--- a/src/app/components/world-flags-map/world-flags-map.component.html
+++ b/src/app/components/world-flags-map/world-flags-map.component.html
@@ -1,3 +1,8 @@
+<input 
+    type='button'  
+    (click)='_onBestResolution()'
+    value='Best Resolution' />
+
 <div class='world'
      [style.width.px]='_wholeWidth'
      [style.height.px]='_wholeHeight'>
@@ -5,6 +10,7 @@
     <div *ngFor='let a2Country of _countriesKeys'
         [style.top.px]='_getCountryTop(a2Country)'
         [style.left.px]='_getCountryLeft(a2Country)'
+        [style.line-height.px]='13'
         class='country-flag-container'>
         
         <app-country-flag 
